[gd_scene load_steps=2 format=4 uid="uid://cpdfmqflphrc"]

[ext_resource type="Script" path="res://scenes/wave_display/wave_display.gd" id="1_k7duy"]

[node name="WaveDisplay" type="Control"]
layout_mode = 1
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.3
anchor_bottom = 0.2
offset_right = 200.0
offset_bottom = 120.0
script = ExtResource("1_k7duy")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="WaveLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Wave 1 / 5"
theme_override_font_sizes/font_size = 20

[node name="EnemyCountLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Enemies: 3"

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer"]
layout_mode = 2
value = 20.0

[node name="DifficultyLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Difficulty: 1.0x"
theme_override_font_sizes/font_size = 12

[node name="TimerLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Next wave in: 15s"
theme_override_font_sizes/font_size = 12
